--- a/package.json
+++ b/package.json
@@ -33,14 +33,17 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "lucide-react": "^0.553.0",
     "next": "15.5.6",
     "next-themes": "^0.4.6",
     "prisma": "^6.19.0",
-    "react": "19.1.0",
+    "react": "^19.0.0-rc.1",
     "react-day-picker": "^9.11.1",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.0.0-rc.1",
     "react-hook-form": "^7.66.0",
+    "react-leaflet": "^5.0.0",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
@@ -50,6 +53,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
