feat: implement password reset flow and fix email sending

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,10 @@ GITHUB_CLIENT_SECRET="your_github_client_secret"
 GOOGLE_CLIENT_ID="your_google_client_id"
 GOOGLE_CLIENT_SECRET="your_google_client_secret"
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
+
+# Resend Email Service (for production password reset emails)
+# Get your API key from https://resend.com/api-keys
+RESEND_API_KEY="re_your_api_key_here"
+# Use your verified domain email or onboarding@resend.dev for testing
+RESEND_FROM_EMAIL="noreply@yourdomain.com"
+
