--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-hook-form": "^7.66.0",
     "react-leaflet": "^5.0.0",
     "recharts": "^2.15.4",
+    "resend": "^6.5.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tsx": "^4.20.6",
